--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,13 +9,46 @@
     background: white;
     box-shadow: 3px 3px -8px 3px #ddd;
 }
+.navi{
+    width: 100%;
+    height:100%;
+    position: fixed;      
+    top:0;
+    left:0;
+    bottom:0;
+    right:0;
+    z-index: 100;
+    background: #00000084;
+    display:block
+}
+.remi{
+    width: 15rem;
+    height: 100%;
+    position :fixed;
+    top:5%;
+    bottom:5%;
+    right:5%;
+    left:5%;
+    background:#fff;
+    z-index: 200;
+    border-radius: 10px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    line-height: 30px;
+
+}
+.show__rem{
+    display:none;
+}
+
 
 @media only screen and (max-width:1024px){
+    
     .navigation{
         width: 100%;
         height:100%;
-        position: fixed;
-        
+        position: fixed;      
         top:0;
         left:0;
         z-index: 100;
@@ -36,9 +69,7 @@
         justify-content: center;
         align-items: center;
         line-height: 30px;
-       
-
-    }
+       }
     .show__menu{
         display:block
     }
